00-guidebooks/10-galopom/10-pod-and-service/manifests/10-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: step1
spec:
  containers:
    - image: nginx:1.20
      imagePullPolicy: IfNotPresent
      name: nginx
