00-guidebooks/10-galopom/10-pod-and-service/manifests/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: step1
spec:
  ports:
    - name: web
      port: 80
  selector:
    app: frontend
  type: ClusterIP
