00-guidebooks/10-galopom/10-pod-and-service/manifests/30-service-NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-nodeport
  namespace: step1
spec:
  ports:
  - name: web
    port: 80
    targetPort: 80
    nodePort: 30080
  selector:
    app: frontend
  type: NodePort
