00-guidebooks/10-galopom/10-pod-and-service/manifests/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: step1
  name: main
spec:
  rules:
    - host: kopylov.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: web
